[BE] content 반영 안 되는 에러 수정, Delete partial 처리 (#515)